# recsys-demo

./: .flake8  .gitignore  .venv  CLAUDE.md  PRD.md  README.md  gbdt_binary_classification.md  gbdt_binary_classification_offline.html  gbdt_class_imbalance.md  gbdt_class_imbalance_offline.html  gbdt_learning_to_rank.md  gbdt_learning_to_rank_offline.html  gbdt_multiitem_imbalance.md  gbdt_multiitem_imbalance_offline.html  kedro_design_philosophy.md  plan.md  pyproject.toml
.agent-logs/: task-0.2.md
.claude/: settings.json
docs/: behavior-diagrams.html  change-guide.md  change-sop.md  config-and-versioning.md  config-docs-audit.md  data-lineage.html  design-principles.md  handbook-writing-guide.md  metrics.html  metrics.md  pipeline-runbook.md  ranking-diagnosis-framework.md  spark-connection-architecture.md  worktree-venv-setup.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
messages/: 2026-03-13-230026-command-messageinitcommand-message.txt  2026-03-14-090506-planmd-openspecproposal-change.txt  2026-03-15-105538-implement-the-following-plan.txt  2026-03-15-130811-dataset-pipelineaskuserque.txt  2026-03-15-142731-implement-the-following-plan.txt  2026-03-15-145127-implement-the-following-plan.txt  2026-03-15-213617-implement-the-following-plan.txt  2026-03-15-224214-implement-the-following-plan.txt  2026-03-16-105323-implement-the-following-plan.txt  2026-03-16-124750-implement-the-following-plan.txt  2026-03-17-102103-implement-the-following-plan.txt  2026-03-17-110117-implement-the-following-plan.txt  2026-03-17-161358-implement-the-following-plan.txt  2026-03-17-182411-local-command-caveatcaveat-the-messages-below-w.txt  (+1 more)
(+896 files in other folders)
